# RP2040

./: .gitignore  .gitmodules  CMakeLists - Copy.tpl  CMakeLists.tpl  CMakeLists.txt  CMakeLists.txt.copy  COPYING  MCP3221.c  MCP3221.h  PCA9654E.c  README.md  bluetooth.c  bluetooth.h  bt_native.c  bt_native.h  btt_skr_pico_10.c  btt_skr_pico_10_map.h  citoh_cx6000.c  citoh_cx6000_map.h  cnc_boosterpack_map.h  crash_report.c  crash_report.h  dhcpserver.c  driver.c  driver.h  driver.json  driverPIO.pio  driver_spindles.c  flash.c  flash.h  generic_map.h  generic_map_4axis.h  grblhal_noboot2.ld  i2c.c  i2c.h  ioexpand.h  ioports.c  ioports_analog.c  littlefs_hal.c  littlefs_hal.h  (+26 more)
boards/: RP2350B_5X_map.h  btt_skr_pico_10.c  btt_skr_pico_10_map.h  citoh_cx6000.c  citoh_cx6000_map.h  cnc_boosterpack_map.h  flexihal2350.c  flexihal2350_map.h  generic_map.h  generic_map_4axis.h  generic_map_8axis.h  my_board.c  my_machine_map.h  pico_cnc.c  pico_cnc_map.h  picobob_dlx_g540_map.h  picobob_dlx_map.h  picobob_g540_map.h  picobob_map.h  picohal_map.h  slblite.c  slblite_map.h
fatfs/: diskio.c  ffconf.h
